Fix: Fix `z-index` issue in navigation
- Fixes `z-index` issue in main navigation on mobile devices

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -11,6 +11,10 @@
 	position: absolute;
 	width: 100vw;
 	display: none;
+	z-index: 1;
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
 
 	ul {
 		margin: 0;
